# Debugger

./: pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
.history/: pyproject_20240310081605.toml  pyproject_20240310082249.toml  pyproject_20240402103335.toml  pyproject_20240402103341.toml  pyproject_20240402103505.toml  setup_20240310082253.py
.history/dotsinspace_debugger/: __init___20240717210944.py  __init___20240717210959.py  __init___20240717211010.py  __init___20240717211015.py  __init___20240717211023.py  __init___20240717211046.py  __init___20240717211053.py  __init___20240717211059.py  __init___20240717211106.py
DOTSINSPACE.DEBUGGER.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
debugger/: pyproject.toml
debugger.egg-info/: SOURCES.txt
debugger/debugger.egg-info/: PKG-INFO
dotsinspace.debugger.egg-info/: SOURCES.txt  entry_points.txt
dotsinspace_debugger.egg-info/: PKG-INFO  SOURCES.txt
dotsinspace_debugger/debugger.egg-info/: SOURCES.txt  requires.txt
