[build-system]
requires      = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debugger"
version = "1.0.0"
description = "Simple colorful debugger for logging."
readme = "README.md"
authors = [{ name = "dotsinspace", email = "dotsinspace@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
keywords = ["utility"]
dependencies = [
    "colorama >= 0.4.6",
    "sentry_sdk",
    'aiofiles',
    'ujson'
]

[project.urls]
Homepage = "https://github.com/dotsinspace/Debugger"

[tool.setuptools_scm]